[package]
name = "celestia-node-client-rs"
version = "0.0.0"
authors = ["John Adler <john@celestia.org>"]
edition = "2021"
homepage = "https://celestia.org"
license = "Apache-2.0"
repository = "https://github.com/adlerjohn/celestia-node-client-rs"
description = "🦀 celestia-node REST client in Rust."

[dependencies]
reqwest = "0.11"
serde = "1.0"
