[package]
name = "celestia-node-client-rs"
version = "0.0.0"
authors = ["John Adler <john@celestia.org>"]
edition = "2021"
homepage = "https://celestia.org"
license = "Apache-2.0"
repository = "https://github.com/adlerjohn/celestia-node-client-rs"
description = "🦀 celestia-node REST client in Rust."

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1.19", features = ["macros"] }
